--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>batouLab 0.0.3</title>
+    <title>batouLab 0.0.3.b</title>
     <meta name="description" content="Interface desktop légère multi-IA">
     <meta name="theme-color" content="#ffffff">
     <meta name="color-scheme" content="light">
